[gd_scene load_steps=3 format=3 uid="uid://501efyo6yit4"]

[ext_resource type="Script" uid="uid://cwy0fixun1jh8" path="res://GameFiles/Guns/dowshot_gun.gd" id="1_cwsof"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4uufo"]
radius = 0.05
height = 0.2

[node name="Shotgun" type="Node3D"]
script = ExtResource("1_cwsof")
SHOT_IMPULSE = 17
max_bullets = 5
shot_cooldown = 0.45

[node name="ShotCooldown" type="Timer" parent="."]

[node name="BulletSpread" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.00126153, 0, -0.000196517)

[node name="TopRight" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999329, 0.00134276, -0.0366191, 0, 0.999329, 0.0366437, 0.0366437, -0.0366191, 0.998657, -0.071, 0.071, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/TopRight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="TopLeft" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999329, -0.00134276, 0.0366191, 0, 0.999329, 0.0366437, -0.0366437, -0.0366191, 0.998657, 0.071, 0.071, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/TopLeft"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="BotRight" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999329, -0.00134276, -0.0366191, 0, 0.999329, -0.0366437, 0.0366437, 0.0366191, 0.998657, -0.071, -0.071, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/BotRight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="BotLeft" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999329, 0.00134276, 0.0366191, 0, 0.999329, -0.0366437, -0.0366437, 0.0366191, 0.998657, 0.071, -0.071, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/BotLeft"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="Top" type="Node3D" parent="BulletSpread"]
transform = Transform3D(1, 0, 0, 0, 0.99863, 0.052336, 0, -0.052336, 0.99863, 0, 0.12, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/Top"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="Left" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.99863, 0, 0.052336, 0, 1, 0, -0.052336, 0, 0.99863, 0.12, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/Left"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="Right" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.99863, 0, -0.052336, 0, 1, 0, 0.052336, 0, 0.99863, -0.12, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/Right"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="Bot" type="Node3D" parent="BulletSpread"]
transform = Transform3D(1, 0, 0, 0, 0.99863, -0.052336, 0, 0.052336, 0.99863, 0, -0.12, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/Bot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="MidBot" type="Node3D" parent="BulletSpread"]
transform = Transform3D(1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 0, -0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/MidBot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="MidTop" type="Node3D" parent="BulletSpread"]
transform = Transform3D(1, 0, 0, 0, 0.999848, 0.0174524, 0, -0.0174524, 0.999848, 0, 0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/MidTop"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="MdRight" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999848, 0, -0.0174524, 0, 1, 0, 0.0174524, 0, 0.999848, -0.05, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/MdRight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[node name="MidLeft" type="Node3D" parent="BulletSpread"]
transform = Transform3D(0.999848, 0, 0.0174524, 0, 1, 0, -0.0174524, 0, 0.999848, 0.05, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletSpread/MidLeft"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CapsuleMesh_4uufo")

[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
